# Lunii_Synchro

./: .gitignore  CHANGELOG.md  MACOS_RELEASE.md  README.md  TODO.md  boite-app.entitlements  boite-app.py  boite-app.spec  boite-bridge.py  boite-push.py  build-macos.sh  build-windows.ps1  lunii-app.py  lunii-app.spec  lunii-bridge.py  lunii-push.py  package-lock.json  package.json  requirements.txt  setup.ps1  setup.sh
.github/workflows/: build.yml  windows-release.yml
docs/project-history/: PROMPT_CLAUDE_CHANTIER_RUST_TRANSFERT.md  PROMPT_CLAUDE_CHANTIER_RUST_TRANSFERT_EXECUTION_MAX.md  PROMPT_CLAUDE_VNEXT_PROPRE_AVANT_RUST.md  README.md
mac-app-store/: APP_STORE_CONTENT.md  MAC_APP_STORE.md  NATIVE_IMPORT.md  PrivacyInfo.xcprivacy  boite-app-store.entitlements  build-mac-app-store.sh  package.json
mac-app-store/src/: index.html  main.js
mac-app-store/src-tauri/: Cargo.toml  tauri.appstore.conf.json  tauri.conf.json
mac-app-store/src-tauri/capabilities/: default.json
mac-app-store/src-tauri/src/: app_settings.rs  lunii_crypto.rs  lunii_device.rs  lunii_import.rs  lunii_sync.rs  main.rs  story_pack.rs  storybox_crypto.rs  storybox_device.rs  storybox_import.rs  storybox_sync.rs  studio_story.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_settings.rs  lunii_device.rs  main.rs  storybox_device.rs  storybox_sync.rs
vault/: 00-brief.md  10-mailbox.md  20-decisions.md  30-discoveries.md  40-roadmap.md
